// Vitest Snapshot v1

exports[`can convert a complex regex to DOT lang 1`] = `
digraph {
  rankdir=LR;
  s0 -> s1 [label="&epsilon;"];
  s1 -> s2 [label="&epsilon;"];
  s2 -> s3 [label="a"];
  s3 -> s4 [label="b"];
  s1 -> s5 [label="&epsilon;"];
  s5 -> s6 [label="c"];
  s4 -> s7 [label="&epsilon;"];
  s6 -> s7 [label="&epsilon;"];
  s7 -> s1 [label="&epsilon;"];
  s7 -> s8 [label="&epsilon;"];
  s0 -> s8 [label="&epsilon;"];
  s8 -> s9 [label="a"];
  s9 -> s10 [label="b"];
  s10 -> s11 [label="b"];
}
`;

exports[`can convert a concat to DOT lang 1`] = `
digraph {
  rankdir=LR;
  s0 -> s1 [label="a"];
  s1 -> s2 [label="b"];
}
`;

exports[`can convert a kleene closure to DOT lang 1`] = `
digraph {
  rankdir=LR;
  s0 -> s1 [label="&epsilon;"];
  s1 -> s2 [label="a"];
  s2 -> s1 [label="&epsilon;"];
  s2 -> s3 [label="&epsilon;"];
  s0 -> s3 [label="&epsilon;"];
}
`;

exports[`can convert a simple regex to DOT lang 1`] = `
digraph {
  rankdir=LR;
  s0 -> s1 [label="a"];
}
`;

exports[`can convert a union to DOT lang 1`] = `
digraph {
  rankdir=LR;
  s0 -> s1 [label="&epsilon;"];
  s1 -> s2 [label="a"];
  s0 -> s3 [label="&epsilon;"];
  s3 -> s4 [label="b"];
  s2 -> s5 [label="&epsilon;"];
  s4 -> s5 [label="&epsilon;"];
}
`;
